...
  @override
  Widget build(BuildContext context) {
    return Scaffold(
      backgroundColor: backgroundColor,
      appBar: AppBar(
        leading: IconButton(
          key: const Key('logout_button'),
          onPressed: () async {
            await _authService.signOut();
            Navigator.pushAndRemoveUntil(
              context,
              MaterialPageRoute(builder: (context) => AuthWrapper()),
                  (route) => false,
...
                      spreadRadius: 2,
                      blurRadius: 8,
                    ),
                  ],
                ),
                child: TextField(
                  key: const Key('search_bar'),
                  decoration: InputDecoration(
                    filled: true,
                    fillColor: Colors.white,
                    prefixIcon: Icon(Icons.search, color: primaryColor),
                    hintText: 'Search friends...',
                    hintStyle: TextStyle(color: primaryColor.withOpacity(0.7)),
...
                    _buildActionButton(
                      icon: Icons.person_add,
                      color: primaryColor,
                      onPressed: () {
                        Navigator.pushNamed(context, '/addFriend');
                      },
                      key: 'add_friend_button',
                    ),
                    _buildActionButton(
                      icon: Icons.add_card_sharp,
                      color: secondaryColor,
                      onPressed: () {
                        Navigator.pushNamed(context, '/createEvent');
...
